package entity.item;

import javafx.scene.image.Image;

public abstract class Item {
    public abstract Image getIcon();
    public abstract String getName();
    public abstract String getDesc();
}
